--- a/Frontend/Travel-Journal/package.json
+++ b/Frontend/Travel-Journal/package.json
@@ -23,7 +23,8 @@
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.4.0",
     "react-toastify": "^11.0.5",
-    "sonner": "^2.0.3"
+    "sonner": "^2.0.3",
+    "vite": "^6.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
