--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "mapbox-gl": "^3.11.0",
     "multer": "^1.4.5-lts.2",
     "react-leaflet": "^5.0.0",
-    "react-router-dom": "^7.4.0"
+    "react-router-dom": "^7.4.0",
+    "vite": "^6.2.0"
   }
 }
