Added new File for vercel deploy

--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "@mapbox/mapbox-sdk": "^0.16.1",
     "axios": "^1.8.4",
