--- a/vercel.json
+++ b/vercel.json
@@ -2,12 +2,8 @@
   "version": 2,
   "builds": [
     {
-      "src": "Frontend/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "buildCommand": "npm run build --prefix Frontend",
-        "distDir": "Frontend/dist"
-      }
+      "src": "Frontend/Travel-Journal/package.json",
+      "use": "@vercel/static-build"
     },
     {
       "src": "Backend/server.js",
@@ -21,7 +17,9 @@
     },
     {
       "src": "/(.*)",
-      "dest": "/Frontend/dist/$1"
+      "dest": "/Frontend/Travel-Journal/dist/$1"
     }
-  ]
+  ],
+  "buildCommand": "cd Frontend/Travel-Journal && npm install && npm run build",
+  "outputDirectory": "Frontend/Travel-Journal/dist"
 }
