--- a/Frontend/Travel-Journal/package.json
+++ b/Frontend/Travel-Journal/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@mapbox/mapbox-sdk": "^0.16.1",
+    "@tinymce/tinymce-react": "^6.2.1",
     "leaflet": "^1.9.4",
     "leaflet-geosearch": "^4.2.0",
     "lucide": "^0.487.0",
@@ -21,6 +22,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.4.0",
     "react-toastify": "^11.0.5",
     "sonner": "^2.0.3",
